ass1/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'void'", "'boolean'", "'float'", 
                     "'string'", "'nil'", "'class'", "'break'", "'continue'", 
                     "'do'", "'else'", "'extends'", "'if'", "'new'", "'then'", 
                     "'for'", "'return'", "'true'", "'false'", "'this'", 
                     "'final'", "'static'", "'to'", "'downto'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "':='", "'='", "'+'", "'-'", 
                     "'*'", "'/'", "'\\'", "'%'", "'!='", "'=='", "'<'", 
                     "'>'", "'<='", "'>='", "'||'", "'&&'", "'!'", "'^'", 
                     "'['", "']'", "'('", "')'", "'{'", "'}'", "';'", "':'", 
                     "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "INTTYPE", "VOIDTYPE", "BOOLTYPE", "FLOATTYPE", 
                      "STRINGTYPE", "NILTYPE", "CLASSTYPE", "BREAK", "CONTINUE", 
                      "DO", "ELSE", "EXTENDS", "IF", "NEW", "THEN", "FOR", 
                      "RETURN", "BTRUE", "BFALSE", "THIS", "FINAL", "STATIC", 
                      "TO", "DOWNTO", "BLOCKCMT", "LINECMT", "ID", "ASM", 
                      "EQOP", "ADDOP", "SUBOP", "MULOP", "FDIVOP", "IDIVOP", 
                      "MODOP", "NEQ", "EQ", "LT", "GT", "LTE", "GTE", "LOR", 
                      "LAND", "LNOT", "CON", "LSB", "RSB", "LB", "RB", "LP", 
                      "RP", "SEMI", "COLON", "DOT", "COMMA", "INTLIT", "FLOATLIT", 
                      "STRINGLIT", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_attr = 1
    RULE_meth = 2
    RULE_expr = 3
    RULE_expr1 = 4
    RULE_expr2 = 5
    RULE_expr3 = 6
    RULE_expr4 = 7
    RULE_expr5 = 8
    RULE_expr6 = 9
    RULE_expr7 = 10
    RULE_expr8 = 11
    RULE_expr9 = 12
    RULE_expr10 = 13
    RULE_expr11 = 14
    RULE_blockstm = 15
    RULE_varclr = 16
    RULE_stmt = 17
    RULE_asmstm = 18
    RULE_lhs = 19
    RULE_ifstm = 20
    RULE_forstm = 21
    RULE_brkstm = 22
    RULE_constm = 23
    RULE_rtstm = 24
    RULE_invstm = 25
    RULE_typ = 26
    RULE_arraytype = 27
    RULE_arraylit = 28
    RULE_boollit = 29

    ruleNames =  [ "program", "attr", "meth", "expr", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "expr7", "expr8", 
                   "expr9", "expr10", "expr11", "blockstm", "varclr", "stmt", 
                   "asmstm", "lhs", "ifstm", "forstm", "brkstm", "constm", 
                   "rtstm", "invstm", "typ", "arraytype", "arraylit", "boollit" ]

    EOF = Token.EOF
    INTTYPE=1
    VOIDTYPE=2
    BOOLTYPE=3
    FLOATTYPE=4
    STRINGTYPE=5
    NILTYPE=6
    CLASSTYPE=7
    BREAK=8
    CONTINUE=9
    DO=10
    ELSE=11
    EXTENDS=12
    IF=13
    NEW=14
    THEN=15
    FOR=16
    RETURN=17
    BTRUE=18
    BFALSE=19
    THIS=20
    FINAL=21
    STATIC=22
    TO=23
    DOWNTO=24
    BLOCKCMT=25
    LINECMT=26
    ID=27
    ASM=28
    EQOP=29
    ADDOP=30
    SUBOP=31
    MULOP=32
    FDIVOP=33
    IDIVOP=34
    MODOP=35
    NEQ=36
    EQ=37
    LT=38
    GT=39
    LTE=40
    GTE=41
    LOR=42
    LAND=43
    LNOT=44
    CON=45
    LSB=46
    RSB=47
    LB=48
    RB=49
    LP=50
    RP=51
    SEMI=52
    COLON=53
    DOT=54
    COMMA=55
    INTLIT=56
    FLOATLIT=57
    STRINGLIT=58
    WS=59
    ERROR_CHAR=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def CLASSTYPE(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.CLASSTYPE)
            else:
                return self.getToken(BKOOLParser.CLASSTYPE, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def LP(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.LP)
            else:
                return self.getToken(BKOOLParser.LP, i)

        def RP(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.RP)
            else:
                return self.getToken(BKOOLParser.RP, i)

        def EXTENDS(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.EXTENDS)
            else:
                return self.getToken(BKOOLParser.EXTENDS, i)

        def attr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.AttrContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.AttrContext,i)


        def meth(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.MethContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.MethContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 60
                self.match(BKOOLParser.CLASSTYPE)
                self.state = 61
                self.match(BKOOLParser.ID)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.EXTENDS:
                    self.state = 62
                    self.match(BKOOLParser.EXTENDS)
                    self.state = 63
                    self.match(BKOOLParser.ID)


                self.state = 66
                self.match(BKOOLParser.LP)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.INTTYPE) | (1 << BKOOLParser.VOIDTYPE) | (1 << BKOOLParser.BOOLTYPE) | (1 << BKOOLParser.FLOATTYPE) | (1 << BKOOLParser.STRINGTYPE) | (1 << BKOOLParser.FINAL) | (1 << BKOOLParser.STATIC) | (1 << BKOOLParser.ID))) != 0):
                    self.state = 69
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        self.state = 67
                        self.attr()
                        pass

                    elif la_ == 2:
                        self.state = 68
                        self.meth()
                        pass


                    self.state = 73
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 74
                self.match(BKOOLParser.RP)
                self.state = 77 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.CLASSTYPE):
                    break

            self.state = 79
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(BKOOLParser.TypContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def EQOP(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.EQOP)
            else:
                return self.getToken(BKOOLParser.EQOP, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ExprContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.COMMA)
            else:
                return self.getToken(BKOOLParser.COMMA, i)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_attr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr" ):
                return visitor.visitAttr(self)
            else:
                return visitor.visitChildren(self)




    def attr(self):

        localctx = BKOOLParser.AttrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_attr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.STATIC]:
                self.state = 81
                self.match(BKOOLParser.STATIC)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.FINAL:
                    self.state = 82
                    self.match(BKOOLParser.FINAL)


                pass
            elif token in [BKOOLParser.FINAL]:
                self.state = 85
                self.match(BKOOLParser.FINAL)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.STATIC:
                    self.state = 86
                    self.match(BKOOLParser.STATIC)


                pass
            elif token in [BKOOLParser.INTTYPE, BKOOLParser.VOIDTYPE, BKOOLParser.BOOLTYPE, BKOOLParser.FLOATTYPE, BKOOLParser.STRINGTYPE, BKOOLParser.ID]:
                pass
            else:
                pass
            self.state = 91
            self.typ()
            self.state = 92
            self.match(BKOOLParser.ID)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EQOP:
                self.state = 93
                self.match(BKOOLParser.EQOP)
                self.state = 94
                self.expr(0)


            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKOOLParser.COMMA:
                self.state = 97
                self.match(BKOOLParser.COMMA)
                self.state = 98
                self.match(BKOOLParser.ID)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.EQOP:
                    self.state = 99
                    self.match(BKOOLParser.EQOP)
                    self.state = 100
                    self.expr(0)


                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def blockstm(self):
            return self.getTypedRuleContext(BKOOLParser.BlockstmContext,0)


        def typ(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.TypContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.TypContext,i)


        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.COMMA)
            else:
                return self.getToken(BKOOLParser.COMMA, i)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.SEMI)
            else:
                return self.getToken(BKOOLParser.SEMI, i)

        def getRuleIndex(self):
            return BKOOLParser.RULE_meth

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMeth" ):
                return visitor.visitMeth(self)
            else:
                return visitor.visitChildren(self)




    def meth(self):

        localctx = BKOOLParser.MethContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_meth)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.STATIC:
                    self.state = 110
                    self.match(BKOOLParser.STATIC)


                self.state = 113
                self.typ()


            self.state = 116
            self.match(BKOOLParser.ID)
            self.state = 117
            self.match(BKOOLParser.LB)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.INTTYPE) | (1 << BKOOLParser.VOIDTYPE) | (1 << BKOOLParser.BOOLTYPE) | (1 << BKOOLParser.FLOATTYPE) | (1 << BKOOLParser.STRINGTYPE) | (1 << BKOOLParser.ID))) != 0):
                self.state = 118
                self.typ()
                self.state = 119
                self.match(BKOOLParser.ID)
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKOOLParser.COMMA:
                    self.state = 120
                    self.match(BKOOLParser.COMMA)
                    self.state = 121
                    self.match(BKOOLParser.ID)
                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKOOLParser.SEMI:
                    self.state = 127
                    self.match(BKOOLParser.SEMI)
                    self.state = 128
                    self.typ()
                    self.state = 129
                    self.match(BKOOLParser.ID)
                    self.state = 134
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==BKOOLParser.COMMA:
                        self.state = 130
                        self.match(BKOOLParser.COMMA)
                        self.state = 131
                        self.match(BKOOLParser.ID)
                        self.state = 136
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 141
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 144
            self.match(BKOOLParser.RB)
            self.state = 145
            self.blockstm()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr1(self):
            return self.getTypedRuleContext(BKOOLParser.Expr1Context,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ExprContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ExprContext,i)


        def LT(self):
            return self.getToken(BKOOLParser.LT, 0)

        def GT(self):
            return self.getToken(BKOOLParser.GT, 0)

        def LTE(self):
            return self.getToken(BKOOLParser.LTE, 0)

        def GTE(self):
            return self.getToken(BKOOLParser.GTE, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKOOLParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.expr1(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 155
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKOOLParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 150
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 151
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.LT) | (1 << BKOOLParser.GT) | (1 << BKOOLParser.LTE) | (1 << BKOOLParser.GTE))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 152
                    self.expr(3) 
                self.state = 157
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expr1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr2(self):
            return self.getTypedRuleContext(BKOOLParser.Expr2Context,0)


        def expr1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Expr1Context)
            else:
                return self.getTypedRuleContext(BKOOLParser.Expr1Context,i)


        def EQ(self):
            return self.getToken(BKOOLParser.EQ, 0)

        def NEQ(self):
            return self.getToken(BKOOLParser.NEQ, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_expr1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr1" ):
                return visitor.visitExpr1(self)
            else:
                return visitor.visitChildren(self)



    def expr1(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKOOLParser.Expr1Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr1, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.expr2(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 166
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,17,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKOOLParser.Expr1Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr1)
                    self.state = 161
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 162
                    _la = self._input.LA(1)
                    if not(_la==BKOOLParser.NEQ or _la==BKOOLParser.EQ):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 163
                    self.expr1(3) 
                self.state = 168
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expr2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr3(self):
            return self.getTypedRuleContext(BKOOLParser.Expr3Context,0)


        def expr2(self):
            return self.getTypedRuleContext(BKOOLParser.Expr2Context,0)


        def LAND(self):
            return self.getToken(BKOOLParser.LAND, 0)

        def LOR(self):
            return self.getToken(BKOOLParser.LOR, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_expr2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr2" ):
                return visitor.visitExpr2(self)
            else:
                return visitor.visitChildren(self)



    def expr2(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKOOLParser.Expr2Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expr2, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.expr3(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 177
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKOOLParser.Expr2Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr2)
                    self.state = 172
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 173
                    _la = self._input.LA(1)
                    if not(_la==BKOOLParser.LOR or _la==BKOOLParser.LAND):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 174
                    self.expr3(0) 
                self.state = 179
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expr3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr4(self):
            return self.getTypedRuleContext(BKOOLParser.Expr4Context,0)


        def expr3(self):
            return self.getTypedRuleContext(BKOOLParser.Expr3Context,0)


        def ADDOP(self):
            return self.getToken(BKOOLParser.ADDOP, 0)

        def SUBOP(self):
            return self.getToken(BKOOLParser.SUBOP, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_expr3

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr3" ):
                return visitor.visitExpr3(self)
            else:
                return visitor.visitChildren(self)



    def expr3(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKOOLParser.Expr3Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expr3, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.expr4(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 188
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKOOLParser.Expr3Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr3)
                    self.state = 183
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 184
                    _la = self._input.LA(1)
                    if not(_la==BKOOLParser.ADDOP or _la==BKOOLParser.SUBOP):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 185
                    self.expr4(0) 
                self.state = 190
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expr4Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr5(self):
            return self.getTypedRuleContext(BKOOLParser.Expr5Context,0)


        def expr4(self):
            return self.getTypedRuleContext(BKOOLParser.Expr4Context,0)


        def MULOP(self):
            return self.getToken(BKOOLParser.MULOP, 0)

        def IDIVOP(self):
            return self.getToken(BKOOLParser.IDIVOP, 0)

        def FDIVOP(self):
            return self.getToken(BKOOLParser.FDIVOP, 0)

        def MODOP(self):
            return self.getToken(BKOOLParser.MODOP, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_expr4

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr4" ):
                return visitor.visitExpr4(self)
            else:
                return visitor.visitChildren(self)



    def expr4(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKOOLParser.Expr4Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expr4, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.expr5(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 199
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,20,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
